Added support for lambda-expressions in the bots commands, cleansed Javadoc in Bot

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,6 @@ application.vendor=CLOVIS
 endorsed.classpath=
 #Mon Dec 11 22:50:03 CET 2017
 excludes=
-file.reference.minimal-json-com.eclipsesource.json=minimal-json/com.eclipsesource.json
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 run.classpath=\
@@ -59,8 +58,7 @@ annotation.processing.enabled=true
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
-javac.classpath=\
-    ${file.reference.minimal-json-com.eclipsesource.json}
+javac.classpath=
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
